--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -11,10 +11,13 @@ pool:
   vmImage: 'ubuntu-latest'
 
 steps:
-- task: NodeTool@0
+- task: oc-cmd@2
   inputs:
-    versionSpec: '10.x'
-  displayName: 'Install Node.js'
-
-- script: npm install
-  displayName: 'npm install'
+    connectionType: 'OpenShift Connection Service'
+    openshiftService: 'Openshift-cluopf01'
+    cmd: 'oc start-build nodejs-ex --follow'
+- task: oc-cmd@2
+  inputs:
+    connectionType: 'OpenShift Connection Service'
+    openshiftService: 'Openshift-cluopf01'
+    cmd: 'oc status'
