--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -15,9 +15,11 @@ steps:
   inputs:
     connectionType: 'OpenShift Connection Service'
     openshiftService: 'Openshift-cluopf01'
+    version: '4.9.13'
     cmd: 'oc start-build nodejs-ex --follow'
 - task: oc-cmd@2
   inputs:
     connectionType: 'OpenShift Connection Service'
     openshiftService: 'Openshift-cluopf01'
+    version: '4.9.13'
     cmd: 'oc status'
