--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -8,18 +8,25 @@ trigger:
 - master
 
 pool:
-  vmImage: 'ubuntu-latest'
+  name: 'WinAgentPool'
 
 steps:
-- task: oc-cmd@2
-  inputs:
-    connectionType: 'OpenShift Connection Service'
-    openshiftService: 'Openshift-cluopf01'
-    version: '4.9.13'
-    cmd: 'oc start-build nodejs-ex --follow'
+
 - task: oc-cmd@2
   inputs:
     connectionType: 'OpenShift Connection Service'
     openshiftService: 'Openshift-cluopf01'
     version: '4.9.13'
     cmd: 'oc status'
+- task: oc-cmd@2
+  inputs:
+    connectionType: 'OpenShift Connection Service'
+    openshiftService: 'Openshift-cluopf01'
+    version: '4.9.13'
+    cmd: 'oc project devops-testdemo'
+- task: oc-cmd@2
+  inputs:
+    connectionType: 'OpenShift Connection Service'
+    openshiftService: 'Openshift-cluopf01'
+    version: '4.9.13'
+    cmd: 'oc start-build nodejs-ex --follow'
